fixed up menu, stuck to single menu vs double menu;

--- a/css/home.css
+++ b/css/home.css
@@ -36,11 +36,6 @@ body {
     width: 100%;
 }
 
-.menu {
-    display: flex;
-    justify-content: center;
-}
-
 .hero {
     padding-top: 25px;
     display: flex;
@@ -63,7 +58,7 @@ h1, h2 {
     font-size: 20px;
 }
 
-.logo, .name .resume-button-container {
+.name .resume-button-container {
     padding-top: 25px;
 }
 
@@ -171,6 +166,48 @@ h1, h2 {
     border: 2px solid #EA7528;
 }
 
+.menu-icon, .footer-icon, .signature {
+    color: white;
+    font-size: 20px;
+    padding: 5px;
+}
+
+.menu-container {
+    background: black;
+    width: 100%;
+    position: sticky;
+    top: 0;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+.menu {
+    list-style: none;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 10px;
+}
+
+.icons-container {
+    display: flex;
+}
+
+.fa-envelope:hover {
+    color: #DA291C;
+}
+
+.fa-github-square:hover {
+    color: #6cc644;
+}
+
+.fa-file:hover {
+    color: yellow;
+}
+
+.fa-linkedin:hover {
+    color: #0077B5;
+}
+
 .footer {
     height: 318px;
     width: 100%;
@@ -180,51 +217,11 @@ h1, h2 {
     justify-content: center;
 }
 
-.logo-container {
-    display: flex;
-    justify-content: center;
-}
-
-.menu-icon, .footer-icon {
-    font-size: 20px;
-    padding: 5px;
-}
-
-.menu-icon, .footer-icon, .signature {
-    color: white;
-}
-
-.secret-menu-container {
-    background: black;
-    width: 100%;
-    position: sticky;
-    top: 0;
-}
-
-.menu {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-}
-
-.menu-icon {
-    color: white;
-}
-
 @media (min-width: 925px) {
-
-    .menu-desktop {
-        padding: 25px;
-    }
-
-    .logo {
-        padding-top: 0px;
-    }
 
     .top-background {
         background-image: url('/images/top-bg.svg');
+        height: 600px;
         border: none;
     }
 
